--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "dayjs": "^1.11.0",
     "react": "^18.0.0",
     "react-bootstrap": "^2.2.3",
+    "react-bootstrap-icons": "^1.8.1",
     "react-dom": "^18.0.0",
+    "react-icons": "^4.3.1",
     "react-scripts": "5.0.0",
     "web-vitals": "^2.1.4"
   },
